[gd_scene load_steps=7 format=3 uid="uid://dym3wrilsnpsv"]

[ext_resource type="FontFile" uid="uid://cf7ol80uefu05" path="res://assets/fonts/PixelOperator8.ttf" id="1_4bxil"]
[ext_resource type="Script" uid="uid://76pqauo1ny6c" path="res://scripts/victoria/ui.gd" id="1_gafsf"]
[ext_resource type="Texture2D" uid="uid://cqk6wqwp1ogyf" path="res://assets/arrows/up.png" id="2_gafsf"]
[ext_resource type="Texture2D" uid="uid://m0oawq5v2wsw" path="res://assets/arrows/down.png" id="3_4yl8n"]
[ext_resource type="Texture2D" uid="uid://civkqxk7n1c68" path="res://assets/arrows/left.png" id="4_tor6e"]
[ext_resource type="Texture2D" uid="uid://bq3fpnbjt0ygk" path="res://assets/arrows/right.png" id="5_jhj8g"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gafsf")

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = 30
layout_mode = 0
offset_right = 82.0
offset_bottom = 14.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ProgressDisplay" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4bxil")
theme_override_font_sizes/font_size = 8
text = "Progress 0%"

[node name="LivesDisplay" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4bxil")
theme_override_font_sizes/font_size = 8
text = "Lives: 10/10"

[node name="TimeLeftDisplay" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4bxil")
theme_override_font_sizes/font_size = 8
text = "Time Left: 0:00"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 384.0
offset_bottom = 216.0

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Left" type="TextureRect" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_tor6e")
stretch_mode = 4

[node name="Spacer2" type="Control" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Down" type="TextureRect" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4yl8n")
stretch_mode = 4

[node name="Spacer" type="Control" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Up" type="TextureRect" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_gafsf")
stretch_mode = 4

[node name="Spacer3" type="Control" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Right" type="TextureRect" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_jhj8g")
stretch_mode = 4
